# vz-search

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-railway.txt  requirements.txt  run.py
data/: LISTAS DE PERSONAS EN MULTIPLES HOSPITALES.docx  Listado 2.docx
data/HOSPITAL CARLOS ARVELEDO/: HOSPITAL MILITAR DR CARLOS ARVELEDO.docx
data/LINK DE BUSQUEDA DE PERSONAS/: LINK BUSCA Y REGISTRA PERSONAS.docx
data/LISTA DIGITALIZADA DIFERENTES ESTADOS/: Lista digitalizada de pacientes en hospitales_.xlsx  Pacientes en hospitales 2.xlsx
data/Sobrevivientes en campo de golf Playa Los cocos/: DIRECCION.docx
scripts/: check-db.py  ingest.py  normalize-paths.py  retry-failed.py  upload-db-to-railway.ps1
src/vz_search/: bootstrap.py  config.py  main.py
src/vz_search/adapters/api/: app.py  dependencies.py  openapi.py  routes.py  schemas.py
src/vz_search/application/: __init__.py  ingest_use_case.py  search_use_case.py
src/vz_search/domain/: entities.py
src/vz_search/domain/ports/: __init__.py  cache_port.py  document_analyzer.py  ingest_port.py  record_repository.py
src/vz_search/infrastructure/: name_extraction.py  path_metadata.py  text_processing.py
src/vz_search/infrastructure/ai/: gemini_analyzer.py  hybrid_analyzer.py  json_parser.py  local_analyzer.py  ollama_analyzer.py  prompts.py
src/vz_search/infrastructure/cache/: ttl_memory_cache.py
src/vz_search/infrastructure/ingestion/: ai_ingestor.py  file_ingestor.py  memory_text_ingestor.py
src/vz_search/infrastructure/persistence/: db_bootstrap.py  (+5 more)
