[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vz-search"
version = "1.0.0"
description = "API REST de búsqueda humanitaria SISMO 2026 VZLA"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "python-multipart>=0.0.9",
  "pymupdf>=1.24.0",
  "rapidfuzz>=3.6.0",
  "cachetools>=5.5.0",
  "pydantic-settings>=2.6.0",
  "google-generativeai>=0.8.0",
]

[project.scripts]
vz-search = "vz_search.main:app"

[tool.setuptools.packages.find]
where = ["src"]
